// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ascension Flare > matches snapshot — obsidian, radial glow, Protocolo Completo > ascension-flare 1`] = `
<View
  className="flex-1 bg-[#0F1512]"
>
  <SafeAreaView
    className="flex-1"
    pointerEvents="none"
  >
    <View
      className="flex-1 items-center justify-center px-10"
    >
      <View
        className="items-center justify-center"
      >
        <Animated.View
          style={
            [
              {
                "opacity": 0,
              },
              {
                "backgroundColor": "#BFA06A",
                "borderRadius": 160,
                "height": 320,
                "position": "absolute",
                "width": 320,
              },
              {
                "shadowColor": "#BFA06A",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 100,
              },
            ]
          }
        />
        <Text
          className="text-center font-display text-3xl text-white"
        >
          Protocolo Completo
        </Text>
        <Text
          className="mt-4 text-center font-body text-sm text-white/60"
        >
          Retornando ao Sanctuary…
        </Text>
      </View>
    </View>
  </SafeAreaView>
</View>
`;

exports[`CueCard > collapsed shows setup only; expanded reveals vector/catch/anti-pattern > cue-card-collapsed 1`] = `
<View
  className="overflow-hidden rounded-2xl border border-white/10 bg-white/5"
>
  <View
    className="px-4 pb-1 pt-3"
  >
    <Text
      className="font-body text-[10px] uppercase tracking-[0.35em] text-matte-gold/80"
    >
      Cue card
    </Text>
  </View>
  <View
    className="px-4 pt-2"
  >
    <Text
      className="font-body text-sm leading-6 text-[#C8CFC4]"
      numberOfLines={2}
    >
      Pés na largura dos ombros, barra sobre o mediopé, escápulas retraídas.
    </Text>
  </View>
  <Pressable
    accessibilityRole="button"
    accessibilityState={
      {
        "expanded": false,
      }
    }
    className="px-4 py-3 active:opacity-70"
    onPress={[Function]}
  >
    <Text
      className="font-body text-sm text-matte-gold"
    >
      Ver dicas completas
    </Text>
  </Pressable>
</View>
`;

exports[`CueCard > collapsed shows setup only; expanded reveals vector/catch/anti-pattern > cue-card-expanded 1`] = `
<View
  className="overflow-hidden rounded-2xl border border-white/10 bg-white/5"
>
  <View
    className="px-4 pb-1 pt-3"
  >
    <Text
      className="font-body text-[10px] uppercase tracking-[0.35em] text-matte-gold/80"
    >
      Cue card
    </Text>
  </View>
  <View
    className="px-4 pt-2"
  >
    <Text
      className="font-body text-sm leading-6 text-[#C8CFC4]"
    >
      Pés na largura dos ombros, barra sobre o mediopé, escápulas retraídas.
    </Text>
  </View>
  <Animated.View
    className="mt-3 gap-3 border-t border-white/5 px-4 pt-3"
    entering={
      {
        "duration": [Function],
      }
    }
    exiting={
      {
        "duration": [Function],
      }
    }
  >
    <View
      className="flex-row gap-3"
    >
      <Text
        className="w-5 text-center font-body text-sm text-matte-gold/70"
      >
        →
      </Text>
      <View
        className="flex-1"
      >
        <Text
          className="font-body text-[9px] uppercase tracking-[0.3em] text-[#6B7568]"
        >
          Vetor
        </Text>
        <Text
          className="mt-1 font-body text-sm leading-5 text-[#C8CFC4]"
        >
          Empurre o chão para longe — força vertical, joelhos seguindo os dedos.
        </Text>
      </View>
    </View>
    <View
      className="flex-row gap-3"
    >
      <Text
        className="w-5 text-center font-body text-sm text-matte-gold/70"
      >
        ✦
      </Text>
      <View
        className="flex-1"
      >
        <Text
          className="font-body text-[9px] uppercase tracking-[0.3em] text-[#6B7568]"
        >
          Catch
        </Text>
        <Text
          className="mt-1 font-body text-sm leading-5 text-[#C8CFC4]"
        >
          Glúteo e core firmes no topo, sem hiperextensão lombar.
        </Text>
      </View>
    </View>
    <View
      className="flex-row gap-3"
    >
      <Text
        className="w-5 text-center font-body text-sm text-red-400/70"
      >
        ✕
      </Text>
      <View
        className="flex-1"
      >
        <Text
          className="font-body text-[9px] uppercase tracking-[0.3em] text-red-400/60"
        >
          Anti-padrão
        </Text>
        <Text
          className="mt-1 font-body text-sm leading-5 text-[#C8CFC4]"
        >
          Não deixe os joelhos colapsarem para dentro na subida.
        </Text>
      </View>
    </View>
  </Animated.View>
  <Pressable
    accessibilityRole="button"
    accessibilityState={
      {
        "expanded": true,
      }
    }
    className="px-4 py-3 active:opacity-70"
    onPress={[Function]}
  >
    <Text
      className="font-body text-sm text-matte-gold"
    >
      Ocultar dicas
    </Text>
  </Pressable>
</View>
`;

exports[`Iron exercise card (Quiet Luxury) > renders tempo pills + cue card + set logger for a mocked exercise > iron-exercise-card 1`] = `
<View>
  <View
    className="gap-2"
  >
    <Text
      className="font-body text-[10px] uppercase tracking-[0.35em] text-[#6B7568]"
    >
      Tempo
    </Text>
    <View
      className="flex-row flex-wrap gap-2"
    >
      <View
        className="min-w-[72px] flex-1 overflow-hidden rounded-2xl border px-3 py-2.5 border-matte-gold bg-matte-gold/20"
      >
        <Animated.View
          pointerEvents="none"
          style={
            [
              {
                "opacity": 0.05,
              },
              {
                "backgroundColor": "#BFA06A",
                "borderRadius": 16,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        />
        <Text
          className="font-body text-[9px] uppercase tracking-[0.2em] text-matte-gold"
        >
          Excêntrica
        </Text>
        <Text
          className="mt-1 font-body-medium text-lg text-matte-gold"
        >
          3s
        </Text>
      </View>
      <View
        className="min-w-[72px] flex-1 overflow-hidden rounded-2xl border px-3 py-2.5 border-white/10 bg-white/5"
      >
        <Text
          className="font-body text-[9px] uppercase tracking-[0.2em] text-[#6B7568]"
        >
          Pausa
        </Text>
        <Text
          className="mt-1 font-body-medium text-lg text-[#E8E4DC]"
        >
          1s
        </Text>
      </View>
      <View
        className="min-w-[72px] flex-1 overflow-hidden rounded-2xl border px-3 py-2.5 border-white/10 bg-white/5"
      >
        <Text
          className="font-body text-[9px] uppercase tracking-[0.2em] text-[#6B7568]"
        >
          Concêntrica
        </Text>
        <Text
          className="mt-1 font-body-medium text-lg text-[#E8E4DC]"
        >
          X
        </Text>
      </View>
      <View
        className="min-w-[72px] flex-1 overflow-hidden rounded-2xl border px-3 py-2.5 border-white/10 bg-white/5"
      >
        <Text
          className="font-body text-[9px] uppercase tracking-[0.2em] text-[#6B7568]"
        >
          Pausa
        </Text>
        <Text
          className="mt-1 font-body-medium text-lg text-[#E8E4DC]"
        >
          0s
        </Text>
      </View>
    </View>
  </View>
  <View
    className="overflow-hidden rounded-2xl border border-white/10 bg-white/5"
  >
    <View
      className="px-4 pb-1 pt-3"
    >
      <Text
        className="font-body text-[10px] uppercase tracking-[0.35em] text-matte-gold/80"
      >
        Cue card
      </Text>
    </View>
    <View
      className="px-4 pt-2"
    >
      <Text
        className="font-body text-sm leading-6 text-[#C8CFC4]"
        numberOfLines={2}
      >
        Pés na largura dos ombros, barra sobre o mediopé, escápulas retraídas.
      </Text>
    </View>
    <Pressable
      accessibilityRole="button"
      accessibilityState={
        {
          "expanded": false,
        }
      }
      className="px-4 py-3 active:opacity-70"
      onPress={[Function]}
    >
      <Text
        className="font-body text-sm text-matte-gold"
      >
        Ver dicas completas
      </Text>
    </Pressable>
  </View>
  <View
    className="gap-5 rounded-2xl border border-white/10 bg-white/5 px-4 py-5"
  >
    <View
      className=""
    >
      <Text
        className="text-center font-body text-[10px] uppercase tracking-[0.4em] text-[#6B7568]"
      >
        Peso (kg)
      </Text>
      <View
        className="mt-2 flex-row items-center justify-center gap-7"
      >
        <Pressable
          accessibilityLabel="Diminuir Peso (kg)"
          className="h-12 w-12 items-center justify-center rounded-full border border-white/10 bg-white/[0.06] active:bg-matte-gold/15"
          disabled={false}
          hitSlop={8}
          onPress={[Function]}
        >
          <Text
            className="font-body-medium text-2xl font-bold text-[#E8E4DC]"
          >
            −
          </Text>
        </Pressable>
        <View
          className="min-w-[112px] items-center"
          pointerEvents="box-none"
        >
          <View
            className="flex-row items-baseline justify-center gap-1"
          >
            <TextInput
              accessibilityLabel="Peso (kg)"
              className="min-w-[80px] text-center font-body-medium text-4xl text-matte-gold"
              editable={true}
              inputMode="decimal"
              keyboardType="decimal-pad"
              onBlur={[Function]}
              onChangeText={[Function]}
              onSubmitEditing={[Function]}
              placeholder="0"
              placeholderTextColor="#4A5D44"
              selectTextOnFocus={true}
              style={
                {
                  "fontFamily": "Inter",
                }
              }
              value="80"
            />
            <Text
              className="font-body text-lg text-matte-gold/80"
            >
              kg
            </Text>
          </View>
        </View>
        <Pressable
          accessibilityLabel="Aumentar Peso (kg)"
          className="h-12 w-12 items-center justify-center rounded-full border border-white/10 bg-white/[0.06] active:bg-matte-gold/15"
          disabled={false}
          hitSlop={8}
          onPress={[Function]}
        >
          <Text
            className="font-body-medium text-2xl font-bold text-[#E8E4DC]"
          >
            +
          </Text>
        </Pressable>
      </View>
    </View>
    <View
      className=""
    >
      <Text
        className="text-center font-body text-[10px] uppercase tracking-[0.4em] text-[#6B7568]"
      >
        Reps
      </Text>
      <View
        className="mt-2 flex-row items-center justify-center gap-7"
      >
        <Pressable
          accessibilityLabel="Diminuir Reps"
          className="h-12 w-12 items-center justify-center rounded-full border border-white/10 bg-white/[0.06] active:bg-matte-gold/15"
          disabled={false}
          hitSlop={8}
          onPress={[Function]}
        >
          <Text
            className="font-body-medium text-2xl font-bold text-[#E8E4DC]"
          >
            −
          </Text>
        </Pressable>
        <View
          className="min-w-[112px] items-center"
          pointerEvents="box-none"
        >
          <View
            className="flex-row items-baseline gap-1"
          >
            <Text
              className="font-body-medium text-4xl text-matte-gold"
              style={
                {
                  "fontFamily": "Inter",
                }
              }
            >
              8
            </Text>
          </View>
        </View>
        <Pressable
          accessibilityLabel="Aumentar Reps"
          className="h-12 w-12 items-center justify-center rounded-full border border-white/10 bg-white/[0.06] active:bg-matte-gold/15"
          disabled={false}
          hitSlop={8}
          onPress={[Function]}
        >
          <Text
            className="font-body-medium text-2xl font-bold text-[#E8E4DC]"
          >
            +
          </Text>
        </Pressable>
      </View>
    </View>
    <View>
      <View
        className=""
      >
        <Text
          className="text-center font-body text-[10px] uppercase tracking-[0.4em] text-[#6B7568]"
        >
          RIR
        </Text>
        <View
          className="mt-2 flex-row items-center justify-center gap-7"
        >
          <Pressable
            accessibilityLabel="Diminuir RIR"
            className="h-12 w-12 items-center justify-center rounded-full border border-white/10 bg-white/[0.06] active:bg-matte-gold/15"
            disabled={false}
            hitSlop={8}
            onPress={[Function]}
          >
            <Text
              className="font-body-medium text-2xl font-bold text-[#E8E4DC]"
            >
              −
            </Text>
          </Pressable>
          <View
            className="min-w-[112px] items-center"
            pointerEvents="box-none"
          >
            <View
              className="flex-row items-baseline gap-1"
            >
              <Text
                className="font-body-medium text-4xl text-matte-gold"
                style={
                  {
                    "fontFamily": "Inter",
                  }
                }
              >
                2
              </Text>
            </View>
          </View>
          <Pressable
            accessibilityLabel="Aumentar RIR"
            className="h-12 w-12 items-center justify-center rounded-full border border-white/10 bg-white/[0.06] active:bg-matte-gold/15"
            disabled={false}
            hitSlop={8}
            onPress={[Function]}
          >
            <Text
              className="font-body-medium text-2xl font-bold text-[#E8E4DC]"
            >
              +
            </Text>
          </Pressable>
        </View>
      </View>
      <Text
        className="mt-1 text-center font-body text-[10px] uppercase tracking-[0.25em] text-[#6B7568]"
      >
        Prescrito · 
        2
         RIR
      </Text>
    </View>
    <Pressable
      accessibilityLabel="Log Set 1"
      accessibilityRole="button"
      className="w-full overflow-hidden rounded-2xl px-8 py-4 bg-matte-gold active:opacity-85"
      disabled={false}
      onPress={[Function]}
    >
      <Text
        className="text-center font-body-medium text-sm font-semibold uppercase tracking-[0.35em] text-obsidian"
      >
        Log Set 1
      </Text>
    </Pressable>
  </View>
</View>
`;

exports[`RestTimer > matches snapshot at 50% progress and fires the opening haptic > rest-timer-50pct 1`] = `
<View
  className="absolute inset-0 z-10 items-center justify-center px-8"
  style={
    [
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
      {
        "backgroundColor": "rgba(15, 21, 18, 0.95)",
      },
      null,
    ]
  }
>
  <Text
    className="font-body text-[10px] uppercase tracking-[0.45em] text-matte-gold/80"
  >
    Rest · Breathe
  </Text>
  <View
    className="mt-10 items-center justify-center"
  >
    <Svg
      height={220}
      width={220}
    >
      <G
        origin="110, 110"
        rotation={-90}
      >
        <Circle
          cx={110}
          cy={110}
          fill="transparent"
          r={108}
          stroke="rgba(255,255,255,0.08)"
          strokeWidth={4}
        />
        <Circle
          animatedProps={
            {
              "strokeDashoffset": 339.29200658769764,
            }
          }
          cx={110}
          cy={110}
          fill="transparent"
          r={108}
          stroke="#BFA06A"
          strokeDasharray="678.5840131753953 678.5840131753953"
          strokeLinecap="round"
          strokeWidth={4}
        />
      </G>
    </Svg>
    <View
      className="absolute items-center"
    >
      <Text
        className="font-display-bold text-6xl text-matte-gold"
      >
        0:45
      </Text>
    </View>
  </View>
  <View
    className="absolute bottom-10 right-8"
  >
    <Pressable
      className="px-2 py-2 active:opacity-70"
      onPress={[Function]}
    >
      <Text
        className="font-body text-sm text-white/60"
      >
        Pular descanso
      </Text>
    </Pressable>
  </View>
</View>
`;
